--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "date-fns": "^2.30.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.0"
